--- a/GerenciadorCondominiosProj/Views/Usuarios/Registro.cshtml
+++ b/GerenciadorCondominiosProj/Views/Usuarios/Registro.cshtml
@@ -76,8 +76,9 @@
                             </div>
 
                             <!--Vai mostrar o caminho e nome do arquivo upado-->
-                            <div class="file-path-wrapper"></div>
-                            <input class="file-path validate" type="text" />
+                            <div class="file-path-wrapper">
+                                <input class="file-path validate" type="text" />
+                            </div>
                         </div>
                     </div>
 
@@ -118,15 +119,20 @@
 
 
     @* Somente funciona no ambiente 'Development' *@
-    <environment include="Development">
-        <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"></script>
-    </environment>
+<environment include="Development">
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"></script>
+    <!--Máscaras - pesquisar por 'jquery input mask cdn'-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.js"></script>
+    <script src="~/js/iniciarMascaras.js"></script>
+</environment>
 
     @* Não funciona no ambiente 'Development' *@
-    <environment exclude="Development">
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    </environment>
+<environment exclude="Development">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.min.js"></script>
+    <script src="~/js/iniciarMascaras.js"></script>
+</environment>
 </body>
 </html>
