configuracao identity inicial finalizada

--- a/GerenciadorCondominiosProj/Views/Usuarios/Registro.cshtml
+++ b/GerenciadorCondominiosProj/Views/Usuarios/Registro.cshtml
@@ -72,7 +72,7 @@
                         <div class="file-field input-field col s12">
                             <div class="btn-small">
                                 <span>Selecione sua foto</span>
-                                <input asp-for="@Model.Foto" type="file" class="validate" id="Foto" />
+                                <input asp-for="@Model.Foto" type="file" class="validate" id="foto" />
                             </div>
 
                             <!--Vai mostrar o caminho e nome do arquivo upado-->
